# Astra

./: .gitignore  README.md  index.html  meson.build  meson_options.txt
docs/: README.md  conf.py  index.rst  manual.rst  switcher.json
docs/manual/: attributes.md  basics.md  quickstart.md
example/: main.cpp  meson.build
example/data/: car.hpp  colors.hpp  suv.hpp
generator/: ast_callback.hpp  main.cpp  meson.build  sysinclude.cpp
generator/templates/: enum.inc  header.inc  object.inc
include/astra/: constexpr_map.hpp  expected.hpp  reflectable.hpp  type_id.hpp
latest/: .buildinfo  index.html  manual.html  objects.inv  search.html  searchindex.js
latest/api/: classastra_1_1AppendBuf.html  classastra_1_1ConstexprMap.html  classastra_1_1FieldInfo.html  classastra_1_1FieldIterator.html  classastra_1_1MethodInfo.html  classastra_1_1MethodIterator.html  classastra_1_1TypeInfo.html  classastra_1_1sequence_1_1ErrHelper.html  define_expected_8hpp_1a79bcfb6bde984f42d1124b068a509af7.html  define_type__info_8hpp_1a79bcfb6bde984f42d1124b068a509af7.html  dir_include.html  dir_include_astra.html  dir_include_astra_alloc.html  dir_include_astra_error.html  dir_include_astra_reflection.html  dir_include_astra_serialization.html  dir_include_astra_tools.html  dir_include_astra_type_info.html  dir_include_astra_type_info_variants.html  dir_include_astra_type_info_variants_array.html  dir_include_astra_type_info_variants_enum.html  dir_include_astra_type_info_variants_floating.html  dir_include_astra_type_info_variants_integer.html  (+351 more)
src/: err_helper.cpp  meson.build
(+119 files in other folders)
